# ingestless

./: .gitignore  README.md  enums.py  pyproject.toml
.github/: auto-assign.yaml
.github/workflows/: pylint.yml
manager/: __init__.py  __main__.py  cli.py  config.ini  config.py  database.py  enums.py  manager.py  models.py  provider.py  types.py
manager/cli/: cli.py  functions_cli.py  schedules_cli.py  trigger_cli.py  utils.py
manager/provider/: AWSProvider.py  abstract_provider.py
manager/utils/: displayutils.py  dynamoutils.py  logutils.py  print.py
restmap/: README.md  enums.py  types.py
restmap/assembler/: Assembler.py
restmap/compiler/: BaseCompiler.py  BodyParserNode.py  Compiler.py  CompilerNode.py  HandlerNode.py  HeaderNode.py  RequestNode.py
restmap/executor/: AbstractBaseExecutor.py  AbstractBaseProvider.py  AbstractBucketProvider.py  AbstractFunctionProvider.py  AbstractQueueProvider.py  AbstractTableProvider.py  AbstractTopicProvider.py  BaseExecutor.py  __init__.py  executors.py  providers.py
restmap/manager/: Manager.py  State.py
restmap/orchestrator/: AWSOrchestrator.py  BaseOrchestrator.py  OrchestrationGraph.py  ServiceBusOrchestrator.py
restmap/resolver/: ResolutionGraph.py  Resolver.py  nodes.py
restmap/src/: aws_lambda_python.py
restmap/templateParser/: TemplateParser.py  schemata.py
tests/: test_cli.py  test_manager.py
tests/compiler/: test_Compiler.py  test_PythonCompiler.py
tests/executor/: test_executors.py  test_providers.py
tests/orchestrator/: test_AWSOrchestrator.py  test_BaseOrchestrator.py
utils/: io.py
(+64 files in other folders)
