[tool.poetry]
name = "ingestless"
version = "0.1.0"
description = "Serverless data ingestion orchestration system"
authors = ["ffichtenmueller <frank.winkler@crayon.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
pytest = "^7.2.0"
cron-converter = "^1.0.1"
tabulate = "^0.9.0"
pynamodb = "^5.2.3"
boto3 = "^1.25.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
