[tool.poetry]
name = "ingestless"
version = "0.1.0"
description = "Serverless data ingestion orchestration system"
authors = ["ffichtenmueller <frank.winkler@crayon.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
pytest = "^7.2.0"
cron-converter = "^1.0.1"
tabulate = "^0.9.0"
pynamodb = "^5.2.3"
boto3 = "^1.25.3"
pyyaml = "^6.0"
jsonschema = "^4.17.0"
rfc3339-validator = "^0.1.4"
aws-cdk-lib = "^2.50.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
